--- a/styles/master.css
+++ b/styles/master.css
@@ -1,19 +1,13 @@
 *{
-    margin: 0;
+    margin: 0;    
     font-family: -apple-system, BlinkMacSystemFont, Avenir Next, Avenir,
       Helvetica, sans-serif;
+
   }
 
-.pageHeader {
-    margin: 0;
-    width: 100%;
-    padding-top: 80px;
-    line-height: 1.15;
-    font-size: 48px;
-    color: #333;
+  .contentBody{
     text-align: center;
-    letter-spacing: 0.15em;
-}
+  }
 
 .title {
     margin: 0;
